# pi-brightness-plugin

./: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool  make.sh  pi_brightness.c  pi_brightness.desktop
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
panel-plugin/: Makefile  Makefile.am  Makefile.in  main.c
po/: Makefile  Makefile.in  Makefile.in.in  POTFILES  POTFILES.in
